css/library.css
.container {
  background-color: rgb(67, 95, 187);
  height: auto;
  width: 100%;
  border-radius: 5px;
  border: 3px solid rgb(16, 72, 108);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.container h1 {
  color: white;
  font-family:
    Times New Roman,
    Times,
    serif;
}

.container button[id="logout-btn"] {
  background: rgb(106, 125, 137);
  height: 20px;
  text-align: center;
  color: white;
  font-family:
    Times New Roman,
    Times,
    serif;
}

.container input[type="text"] {
  background: rgb(194, 184, 184);
  align-items: center;
  justify-content: center;
  border: 2px solid black;
  height: 45px;
  width: 100%;
  border-radius: 5px;
}

.container button[type="submit"] {
  background: rgb(106, 125, 137);
  border: black solid 1px;
  outline: none;
  height: px;
  width: 100%;
  border-radius: 20px;
  color: white;
  font-size: 18px;
}

